--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,9 @@
 .navbar {
     background-color: #3a28a7;
 }
+
+@media screen and (min-width: 768px) {
+    .offcanvas {
+        align-items: flex-end;
+    }
+}
